[gd_scene load_steps=6 format=3 uid="uid://teke18cn2sw4"]

[ext_resource type="Script" path="res://Scenes/UI.gd" id="1_ae5og"]
[ext_resource type="Texture2D" uid="uid://b3e708hgb2p4e" path="res://Sprites/heart.png" id="2_2kxqr"]
[ext_resource type="Texture2D" uid="uid://c08dnpfpefinc" path="res://Sprites/Food/banana.png" id="2_hgjeg"]
[ext_resource type="PackedScene" uid="uid://br87usqykhwhq" path="res://Scenes/Components/joystick.tscn" id="3_dwmqo"]
[ext_resource type="Texture2D" uid="uid://cqldq2bgo83wh" path="res://Sprites/Joystick/attackbutton.png" id="4_31xdw"]

[node name="GamePlayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999167, 1)
script = ExtResource("1_ae5og")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_bottom = 62.0
grow_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JuiceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slime Juice:"
horizontal_alignment = 2

[node name="JuiceValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Inventory" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_hgjeg")

[node name="HBoxcontainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 174.0
offset_bottom = 56.0

[node name="MonstersAliveLabel" type="Label" parent="HBoxcontainer"]
layout_mode = 2
text = "Slimes alive:"

[node name="MonstersAliveValue" type="Label" parent="HBoxcontainer"]
layout_mode = 2

[node name="HeartContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.5
offset_top = -40.0
offset_right = 82.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HealthBar" type="Sprite2D" parent="HeartContainer"]
texture_filter = 1
texture = ExtResource("2_2kxqr")
centered = false
hframes = 4
frame = 3

[node name="HealthBar2" type="Sprite2D" parent="HeartContainer"]
texture_filter = 1
position = Vector2(32, 0)
texture = ExtResource("2_2kxqr")
centered = false
hframes = 4
frame = 3

[node name="HealthBar3" type="Sprite2D" parent="HeartContainer"]
texture_filter = 1
position = Vector2(64, 0)
texture = ExtResource("2_2kxqr")
centered = false
hframes = 4
frame = 3

[node name="HealthBar4" type="Sprite2D" parent="HeartContainer"]
texture_filter = 1
position = Vector2(96, 0)
texture = ExtResource("2_2kxqr")
centered = false
hframes = 4
frame = 3

[node name="HealthBar5" type="Sprite2D" parent="HeartContainer"]
texture_filter = 1
position = Vector2(128, 0)
texture = ExtResource("2_2kxqr")
centered = false
hframes = 4
frame = 3

[node name="Locomotion" type="Control" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 300.0
grow_vertical = 0

[node name="Joystick" parent="Locomotion" instance=ExtResource("3_dwmqo")]
position = Vector2(150, 150)
scale = Vector2(2, 2)

[node name="Attack" type="Control" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchor_left = 0.807
anchor_top = 0.802
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00195313
offset_top = 0.303955
grow_horizontal = 0
grow_vertical = 0

[node name="Joystick" parent="Attack" instance=ExtResource("3_dwmqo")]
position = Vector2(150, 150)
scale = Vector2(2, 2)
smallTexture = ExtResource("4_31xdw")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
